# mohini

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  PHILOSOPHY.md  README.md  SECURITY.md  docker-compose.yml  mohini.toml.example
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/gsd-designer/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/marketing-strategist/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
crates/mohini-api/: Cargo.toml
crates/mohini-api/src/: canvas_host.rs  channel_bridge.rs  gateway_ws.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/mohini-api/static/: index_body.html  index_head.html
crates/mohini-api/static/css/: components.css  layout.css  theme.css
crates/mohini-api/static/js/: api.js  app.js
crates/mohini-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  comms.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/mohini-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/mohini-cli/: Cargo.toml
crates/mohini-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/mohini-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/mohini-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  comms.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  security.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/mohini-hands/: Cargo.toml
crates/mohini-hands/bundled/browser/: SKILL.md
crates/mohini-hands/bundled/trader/: SKILL.md
crates/mohini-hands/bundled/twitter/: HAND.toml
crates/mohini-hands/src/: lib.rs  registry.rs
crates/mohini-memory/: Cargo.toml
crates/mohini-memory/src/: consolidation.rs  knowledge.rs  lib.rs  qdrant_store.rs  semantic.rs  session.rs  structured.rs  substrate.rs  usage.rs  vector_store.rs
dashboard/: README.md  index.html  package.json
demos/: 01-spawn-agent.sh  02-multi-agent.sh  03-memory-recall.sh  04-n8n-workflow.sh  05-self-healing.sh  README.md  SCREENSHOTS.md
deploy/: mohini.service
docs/: 247-operation.md  README.md  agent-templates.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  dashboard.md  desktop.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  mcp-skills.md  n8n-orchestration.md  production-checklist.md  providers.md  security.md  skill-development.md  smart-memory.md  troubleshooting.md  workflows.md
marketing/: BLOG-POST.md  LANDING-PAGE.md  LAUNCH.md  REDDIT.md  TWITTER-THREAD.md
scripts/: heartbeat.sh  install.ps1  install.sh  mohini-watchdog.sh
workflows/: health-check.json  memory-decay.json  multi-agent-coordination.json  spawn-agent-hourly.json  webhook-trigger.json
xtask/: Cargo.toml
(+616 files in other folders)
