[package]
name = "mohini-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the Mohini Agent OS daemon"

[dependencies]
mohini-types = { path = "../mohini-types" }
mohini-kernel = { path = "../mohini-kernel" }
mohini-runtime = { path = "../mohini-runtime" }
mohini-memory = { path = "../mohini-memory" }
mohini-channels = { path = "../mohini-channels" }
mohini-wire = { path = "../mohini-wire" }
mohini-skills = { path = "../mohini-skills" }
mohini-hands = { path = "../mohini-hands" }
mohini-extensions = { path = "../mohini-extensions" }
mohini-migrate = { path = "../mohini-migrate" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
