[package]
name = "mohini-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory substrate for the Mohini Agent OS"

[dependencies]
mohini-types = { path = "../mohini-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
qdrant-client = { version = "1", optional = true }

[features]
default = []
qdrant = ["dep:qdrant-client"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
